<resources>
    <string name="app_name">SDGP</string>
    <string name="sign_in">Sign In</string>
    <string name="greeting">Hi there! Nice to see you again.</string>
    <string name="email">Email</string>
    <string name="user_email" />
    <string name="password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="new_user">New user?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="profile_header">Personal Information</string>
    <string name="continueTo">Continue</string>
    <string name="calculate_bfp_header">Calculate Body Fat Percentage</string>
    <string name="years">Years</string>
    <string name="lbs">lbs</string>
    <string name="thigh_circumference">Thigh Circumference</string>
    <string name="knee_circumference">Knee Circumference</string>
    <string name="ankle_circumference">Ankle Circumference</string>
    <string name="biceps_circumference">Biceps Circumference</string>
    <string name="forearm_circumference">Forearm Circumference</string>
    <string name="wrist_circumference">Wrist Circumference</string>
    <string name="cm">cm</string>
    <string name="calculate">Calculate</string>
    <string name="inches">inches</string>
    <string name="your_body_fat_percentage">Your Body Fat \nPercentage</string>
    <string name="progress_track">Progress Track</string>
    <string name="wrist">Wrist</string>
    <string name="knee">Knee</string>
    <string name="elbow">Elbow</string>
    <string name="ankle">Ankle</string>
    <string name="workout_plans">Workout Plans</string>

    <string name="Register">Register</string>
    <string name="emailv">email</string>
    <string name="passwordv">password</string>
    <string name="Registration">Registration</string>
    <string name="SignUp">Sign Up</string>
    <string name="Password">Password</string>
    <string name="login">Log In</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Register Now</string>
</resources>