<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".BFPMales2">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:itemBackground="@color/nav"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/drawer_menu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="80dp"
        android:text="@string/thigh_circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="140dp"
        android:text="@string/knee_circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="200dp"
        android:text="@string/ankle_circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="260dp"
        android:text="@string/biceps_circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="320dp"
        android:text="@string/forearm_circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="380dp"
        android:text="@string/wrist_circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/thighInput"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="60dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kneeInput"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="120dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ankleInput"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="180dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bicepsInput"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="240dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/forearmInput"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="300dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/wristInput"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="360dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calBFPMale"
        android:layout_height="50dp"
        android:layout_width="150dp"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="500dp"
        android:text="@string/calculate"
        android:backgroundTint="@color/darkBlue"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>