<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".BFPMales1">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/nav"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/drawer_menu"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculate_bfp_header"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:paddingTop="110dp"
        android:text="Age"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="160dp"
        android:text="Weight"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="210dp"
        android:text="Height"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="260dp"
        android:text="Neck Circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="310dp"
        android:text="Chest Circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="360dp"
        android:text="Abdomen 2 Circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="410dp"
        android:text="Hip Circumference"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/ageInputM"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="100dp"
        android:inputType="number"
        android:hint="@string/years"
        android:textColorHighlight="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weightInputM"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="150dp"
        android:inputType="number"
        android:hint="@string/lbs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/heightInputM"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="200dp"
        android:inputType="number"
        android:hint="@string/inches"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/neckInputM"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="250dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chestInputM"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="300dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/abdomen2InputM"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="350dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/hipInputM"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="400dp"
        android:inputType="number"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextBFPInputsM"
        android:layout_height="50dp"
        android:layout_width="150dp"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/next"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</RelativeLayout>