<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BFPFemales2">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:itemBackground="@color/nav"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/drawer_menu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="50dp"
        android:text="Forearm"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="105dp"
        android:text="Proximal Thigh"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="160dp"
        android:text="Middle Thigh"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="215dp"
        android:text="Distal Thigh"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="270dp"
        android:text="@string/wrist"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="325dp"
        android:text="@string/knee"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="380dp"
        android:text="@string/elbow"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="435dp"
        android:text="@string/ankle"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/forearmInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="35dp"
        android:inputType="numberDecimal"
        android:hint="cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/proximalThighInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="90dp"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/middleThighInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="145dp"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/distalThighInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="200dp"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/wristInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="255dp"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kneeInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="310dp"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/elbowInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="365dp"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ankleInputF"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="420dp"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calBFPFemale"
        android:layout_height="50dp"
        android:layout_width="150dp"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="520dp"
        android:text="@string/calculate"
        android:backgroundTint="@color/darkBlue"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="500dp"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>